adjustment to main search form input to prevent overflow in responsive layouts

--- a/content/themes/wd-theme/assets/styles/screen.css
+++ b/content/themes/wd-theme/assets/styles/screen.css
@@ -612,6 +612,10 @@ a:hover .icn { opacity: .2; }
     width: 100%;
 }
 
+.input_small {
+    width: 94%;
+}
+
 .input_alt {
     width: 96%;
     padding: 2%;
